[footer][xs]: fixed overlapping footer position - refs #74

--- a/public/sass/_footer.scss
+++ b/public/sass/_footer.scss
@@ -7,7 +7,7 @@ footer .connect li a {
 footer {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: -40;
   left: 0;
   .container {
     padding-top: 0;
